--- a/Hotel_Booking_Analysis_(Pankaj_Rathod)_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_(Pankaj_Rathod)_Capstone_Project.ipynb
@@ -2486,27 +2486,29 @@
         "\n",
         "\n",
         "\n",
-        "1.   Almost 60% Bookings are for City hotel and 40% Bookings are for Resort hotel, therefore City hotel is busier than resort hotel\n",
+        "1.   Almost 67% Bookings are for City hotel and 33% Bookings are for Resort hotel, therefore City hotel is busier than resort hotel\n",
         "\n",
         "\n",
-        "2.   In total, 119000 customers checked in at the hotel, while 75000 canceled their reservations. In percentage terms, 37% of bookings were canceled, whereas 63% of customers checked in. As a result, we realize that no deposit policies may account for the high rate of cancellations\n",
+        "2.    Most of the customer prefer to stay one, two, three and four nights.Where number of bookings for two and three nights has high demand.\n",
         "\n",
-        "2.   Hotel bookings seem to be at their highest level in 2016 so far. Bookings also increase around the middle of the year, with August being the highest followed by July and May. Around August, summer ends and autumn begins. The summer period seems to be the busiest time for hotel bookings. It appears the Winter period has the lowest number of hotel bookings, followed by November and December.\n",
+        " So if we try to analyse the optimal length to stay in order to get best daily rate, we can say that two to four days of accomodation can be more affordable since more people prefer the same, the hotels also launche the offers for mid term accomodation beacause long term stay offers will consume their rooms and new customers can not avail the rooms and hotels may fail to generate extra profits.\n",
+        "\n",
+        "\n",
+        "3.   In total, 119000 customers checked in at the hotel, while 75000 canceled their reservations. In percentage terms, 37% of bookings were canceled, whereas 63% of customers checked in. As a result, we realize that no deposit policies may account for the high rate of cancellations\n",
+        "\n",
+        "4.   Hotel bookings seem to be at their highest level in 2016 so far. Bookings also increase around the middle of the year, with August being the highest followed by July and May. Around August, summer ends and autumn begins. The summer period seems to be the busiest time for hotel bookings. It appears the Winter period has the lowest number of hotel bookings, followed by November and December.\n",
         "\n",
         "     So for the Winter season price of hotel booking should be low or they should provide some special discount so that most of the customers are attracted to the hotel and also it can be the best time of year to book a hotel room. Due to less demand for rooms, the cost for rooms on daily basis is also minimum as compared to other months whereas the month of August has high demand for rooms so it is obvious that the cost of rooms is also at a peak. \n",
         "\n",
         "\n",
         "\n",
-        "3.   The demand for city hotels is always higher than that for resort hotels. It means the majority of the hotels booked are city hotel. So , definitely need to spend the most targeting fund on these hotels.\n",
+        "5.   The demand for city hotels is always higher than that for resort hotels. It means the majority of the hotels booked are city hotel. So , definitely need to spend the most targeting fund on these hotels.\n",
         "\n",
-        "4.   Most of the customer prefer to stay one, two, three and four nights.Where number of bookings for two and three nights has high demand.\n",
+        "6.  we can see that 75% of customer is of transient type which is 3/4 th of the customer based and 21% of customer is of transient-party type.\n",
         "\n",
-        " So if we try to analyse the optimal length to stay in order to get best daily rate, we can say that two to four days of accomodation can be more affordable since more people prefer the same, the hotels also launche the offers for mid term accomodation beacause long term stay offers will consume their rooms and new customers can not avail the rooms and hotels may fail to generate extra profits.\n",
+        "7.   According to the visual representation, people interested in city hotel to stay for two, three, one and four days respectively where for resort hotel people interested to stay one, seven, two and three days respectively.\n",
         "\n",
         "\n",
-        "5.   According to the visual representation, people interested in city hotel to stay for two, three, one and four days respectively where for resort hotel people interested to stay one, seven, two and three days respectively.\n",
-        "\n",
-        "2.   List item\n",
         "\n",
         "\n",
         "\n",
